edit index.html edit main.css
fixed footer and added generic style for main page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,16 +33,16 @@
         {% block body %}
         {% endblock %}
     </div>
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <p></p>
+            </div>
+        </div>
+    </footer>
 </div>
 
-<div class="container">
 
-    <hr>
-
-    <footer>
-        <p>&copy; FOOTER NOT READY YET</p>
-    </footer>
-</div> <!-- /container -->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
